# currency-quote

./: .gitignore  .pre-commit-config.yaml  .xml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: funding.yml
.github/workflows/: CD.yaml  CI.yaml  deploy-dispatcher.yaml
src/: main.py
src/currency_quote/: __init__.py  __init__2.py
src/currency_quote/adapters/inbound/: controller.py  lib_controller.py  test_lib_controller.py
src/currency_quote/adapters/outbound/: currency_api.py  currency_validator_api.py
src/currency_quote/application/ports/inbound/: controller.py  get_currency_quote_use_case.py
src/currency_quote/application/ports/outbound/: currency_repository.py  currency_validator_repository.py
src/currency_quote/application/use_cases/: get_history_currency_quote.py  get_last_currency_quote.py  test_get_history_currency_quote.py  test_get_last_currency_quote.py  test_validate_currency.py  validate_currency.py
src/currency_quote/common/utils/: common.py  logs.py
src/currency_quote/controller/: controller.py
src/currency_quote/domain/entities/: currency.py
src/currency_quote/domain/services/: get_currency_quote.py  validate_currency.py
src/tests/: test_currency.py  test_get_last_currency_quote.py  test_lib_controller.py  test_validate_currency.py
tests/: test_hist_currency_quote.py  test_last_currency_quote.py
