[tool.poetry]
name = "currency-quote"
version = "0.0.1"
description = "Complete solution for extracting currency pair quotes data"
authors = ["IvanildoBarauna <ivanildo.jnr@outlook.com>"]
readme = "README.md"
license = "MIT"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["currency_quote*"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
coverage = "^7.5.4"
pytest = "^8.2.2"
poetry-dynamic-versioning = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-dynamic-versioning]
enable = true
versioning = "semantic"